# fake-store-restful

./: .gitignore  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/auth/: dependencies.py  exceptions.py  routers.py  schemas.py  services.py
backend/core/dependencies/: database.py  redis.py
backend/core/repositories/: database_base.py  redis_base.py
backend/core/utils/: exceptions.py  jwt.py  password.py  validators.py
backend/migrations/: env.py
backend/migrations/versions/: 2c3b9c53732c_create_user_model.py  6250bf561a70_create_products_models.py  737f661598eb_.py  9e496f75cbac_create_products_models.py  d0137959e19b_create_user_model.py  e291d9c680a0_.py  e324932cbaa7_.py
backend/products/: dependencies.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py
backend/products/repositories/: brands.py  categories.py  colors.py  products.py  sizes.py
backend/products/routers/: brands.py  categories.py  colors.py  products.py  sizes.py
backend/products/schemas/: brands.py  categories.py  colors.py  products.py  sizes.py
backend/products/services/: brands.py  categories.py  colors.py  products.py  sizes.py
backend/src/: database.py  redis.py  settings.py
backend/users/: dependencies.py  exceptions.py  models.py  repositories.py  routers.py  schemas.py  services.py
