[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "katsuyorii",email = "katsuyoriiii@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all] (>=0.115.13,<0.116.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "phonenumbers (>=9.0.7,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
